# boilerplate-python-project

./: .editorconfig  Dockerfile  Makefile  README.md  main.py  mkdocs.yml  pyproject.toml  setup.cfg
.github/workflows/: lint.yml
scripts/: create_openapi_json.py
src/app/: app.py
src/boiler_app/: app.py
src/utils/: logger.py  sentry.py
tests/: test_app.py
