[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Florencia Silvestre"]
readme = "README.md"
homepage = "https://github.com/Flor91/boilerplate-python-project"
repository = "https://github.com/Flor91/boilerplate-python-project"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.12"
httpx = "^0.26.0"
fastapi = "^0.109.2"
uvicorn = {extras = ["standard"], version = "^0.27.0.post1"}

[tool.poetry.group.dev.dependencies]
coloredlogs = "^15.0.1"
black = "^24.1.1"
flake8 = "^7.0.0"
pre-commit = "^3.6.0"
isort = "^5.13.2"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.black]
line-length = 88

[tool.mypy]
# 3rd party import
ignore_missing_imports = true
# dynamic typing
disallow_any_unimported = true
disallow_any_expr = false
disallow_any_decorated = false
disallow_any_explicit = true
disallow_any_generics = false
disallow_subclassing_any = true
# platform
python_version = "3.10"
# untyped
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
# None and Optional
no_implicit_optional = true
# Warnings
warn_return_any = false
warn_unreachable = true
# Misc
pretty = true
